--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- button to start quiz -->
       <button id="start">Start Quiz</button>
       <!-- game div -->
-      <div id="quiz">
+      <div class="container hide" id="quiz">
         <!-- replace with question and choices when quiz is clicked -->
         <div id="question">
           <div id="answers">
