--- a/index.html
+++ b/index.html
@@ -9,41 +9,71 @@
   </head>
   <body>
     <!-- header -->
-    <header class="header" id="header">
-      <!-- view highscores -->
-      <button id="scoreBtn">High Scores</button>
-      Welcome to my Quiz
+    <div id="quizPage" class="quizPage">
+      <header class="header" id="header">
+        <!-- view highscores -->
+        <button id="scoreBtn">High Scores</button>
+        Welcome to my Quiz
 
-      <!-- timer -->
-      <div id="timer">60 Secs</div>
-    </header>
-    <div class="body">
-      <div class="container" id="container">
-        <!-- content -->
+        <!-- timer -->
+        <div id="timer">60 Secs</div>
+      </header>
+      <div class="body">
+        <div class="container" id="container">
+          <!-- content -->
 
-        <!-- intial state div -->
+          <!-- intial state div -->
 
-        <!-- game div -->
-        <div class="qContainer" id="qContainer">
-          <!-- replace with question and choices when quiz is clicked -->
-          <div class="hide" id="question">Question</div>
-          <div class="answers hide" id="answers">
-            <button class="btn" id="A">Answer A</button>
-            <button class="btn" id="B">Answer B</button>
-            <button class="btn" id="C">Answer C</button>
-            <button class="btn" id="D">Answer D</button>
-          </div>
-          <!-- button to start quiz -->
-          <div class="quizControls" id="quizControls">
-            <button class="start btn" id="start">Start Quiz</button>
-            <button class="next btn hide" id="next">Next</button>
+          <!-- game div -->
+          <div class="qContainer" id="qContainer">
+            <!-- replace with question and choices when quiz is clicked -->
+            <div class="hide" id="question">Question</div>
+            <div class="answers hide" id="answers">
+              <button class="btn" id="A" onclick="checkAnswer('A')">
+                Answer A
+              </button>
+              <button class="btn" id="B" onclick="checkAnswer('B')">
+                Answer B
+              </button>
+              <button class="btn" id="C" onclick="checkAnswer('C')">
+                Answer C
+              </button>
+              <button class="btn" id="D" onclick="checkAnswer('D')">
+                Answer D
+              </button>
+            </div>
+            <!-- button to start quiz -->
+            <div class="strQuiz">
+              <button class="start btn" id="start">Start Quiz</button>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <!-- high score div -->
-    <div id="highScores"></div>
+
+    <div id="finishQuiz" class="body hide">
+      <form class="finish">
+        <header class="finHead">Congratulations!</header>
+        <div>
+          Here's your score:
+          <div id="score">""</div>
+        </div>
+        <label for="fname">Enter your Initials</label>
+        <input type="text" id="initials" name="initials" />
+        <input type="submit" id="submit" value="Submit" />
+      </form>
+    </div>
     <!-- replace with highscores when scores is clicked -->
+    <div id="highScores" class="body hide">
+      <div class="finish">
+        <header class="finHead">High Scores</header>
+        <div>High score list</div>
+        <div>""</div>
+        <button id="restart">Restart</button>
+        <button id="clear">Clear Scores</button>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
