--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Welcome to my Quiz
 
         <!-- timer -->
-        <div id="timer">60 Secs</div>
+        <div id="timer">Time Left: 60</div>
       </header>
       <div class="body">
         <div class="container" id="container">
@@ -70,7 +70,7 @@
         <header class="finHead">High Scores</header>
         <div>High score list</div>
         <div>""</div>
-        <button id="restart">Restart</button>
+        <button id="restart" class="restart">Restart</button>
         <button id="clear">Clear Scores</button>
       </div>
     </div>
