--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 Answer D
               </button>
             </div>
+            <div id="msg"></div>
             <!-- button to start quiz -->
             <div class="strQuiz">
               <button class="start btn" id="start">Start Quiz</button>
@@ -57,7 +58,7 @@
         <header class="finHead">Congratulations!</header>
         <div>
           Here's your score:
-          <div id="score">""</div>
+          <div id="score"></div>
         </div>
         <label for="fname">Enter your Initials</label>
         <input type="text" id="initials" name="initials" />
@@ -69,7 +70,7 @@
       <div class="finish">
         <header class="finHead">High Scores</header>
         <div>High score list</div>
-        <div>""</div>
+        <p><span id="user-initials"></span></p>
         <button id="restart" class="restart">Restart</button>
         <button id="clear">Clear Scores</button>
       </div>
