--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="highScores" class="body hide">
       <div class="finish">
         <header class="finHead">High Scores</header>
-        <div>High score list</div>
+        <div id="finalScore">High score list</div>
         <p><span id="user-initials"></span></p>
         <button id="restart" class="restart">Restart</button>
         <button id="clear">Clear Scores</button>
